Correction homepage video big screen size

--- a/public/assets/states/home_states.scss
+++ b/public/assets/states/home_states.scss
@@ -209,7 +209,7 @@ main {
   @include media-min("desktop-large") {
     .home_video-contain {
       flex-direction: row;
-      width: 70%;
+      width: 1190px;
       height: 400px;
 
       .home_video-box {
