--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -39,37 +39,37 @@
             </div>
 
             <article>
-                <div class="home_articles">
-                    <div class="home_article-title">
+                <div class="home_articles key_bg2">
+                    <div class="home_article-title article_titlebis">
                         <h2 class="home_article-h article-h2 font-f1 key_ftdw">Qui sommes nous ?</h2>
                     </div>
                     <div class="home_article-wrap">
-                        <p class="home_article-p home-p1 font-f3 key_bg3">
+                        <p class="home_article-p home-p1 font-f3 key_bg1">
                         C’est un fait, la crise écologique est devenue une urgence majeure.
                         le changement climatique se fait de plus en plus ressentir au fil 
                         des années. Et la révolution technologique n'est pas sans conséquences.
                         </p>
-                        <p class="home_article-p home-p2 font-f3 key_bg3">
+                        <p class="home_article-p home-p2 font-f3 key_bg1">
                         En matière d’émissions de CO2, internet pollue 1.5 fois plus que le transport aérien. D’ailleurs, en 20 
                         ans, le poids d’une page web a été multiplié par 115 (source : https://www.greenit.fr/)
                         </p>
                     </div>
                 </div>
                 <hr>
-                <div class="home_articles">
+                <div class="home_articles articles_bis key_bg2">
                     {# <div class="home_article-imgbox"> #}
                     {# </div> #}
                     <div class="home_article-title article-h3">
                         <img class="home_article-img" src="{{ asset('assets/storage/image/lowpolyEarth.png') }}" alt="lowpoly-Earth">
                         <h3 class="home_article-h  font-f1 key_ftdw">Nos objectifs</h3>
                     </div>
-                    <div class="home_article-wrap">
-                        <p class="home_article-p home-p3 font-f3 key_bg4">
+                    <div class="home_article-wrap ">
+                        <p class="home_article-p home-p3 font-f3 key_bg1">
                         Face à ce constat, un organisme de formation a été fondé en 2017 : EcoIT. Son objectif est 
                         d’être une plateforme d’éducation permettant à tout instructeur expert en accessibilité et en 
                         éco-conception web de présenter des modules de cours.
                         </p>
-                        <p class="home_article-p home-p4 font-f3 key_bg4">
+                        <p class="home_article-p home-p4 font-f3 key_bg1">
                         À terme, EcoIT désire devenir la référence française pour les développeurs soucieux de leur 
                         impact digital. Et pourquoi pas délivrer enfin un label officiel pour classer les sites web selon 
                         leur empreinte numérique.
@@ -92,7 +92,7 @@
             <div class="img_box-lesson">
                 <img src="{{ asset('assets/storage/image/astronaut.png') }}" alt="Train">
             </div>
-            <div class="aside-wrapper">
+            <div class="aside-wrapper key_bg3">
                 <div class="home_aside-title">
                     <h2 class="home_aside-h2 font-f1">Dernières formations ajoutées</h2>
                 </div>
@@ -113,7 +113,7 @@
                                 </p>
                             </div>
                         </li>
-                        <li class="home_aside-li key_bg2">
+                        <li class="home_aside-li key_bg1">
                             <div class="home_aside-box">
                                 <div class="home_li-indicator key_bg5"></div>
                                 <div class="home_li-img">
@@ -136,8 +136,8 @@
                                 </div>
                             </div>
                             <div class="home_li-text">
-                                <h2 class="home_li-h2">Titre de la formation</h2>
-                                <p class="home_li-p">
+                                <h2 class="home_li-h2 font-f2">Titre de la formation</h2>
+                                <p class="home_li-p font-f3">
                                     Brève explication de la formation 
                                     Brève explication de la formation
                                 </p>
