--- a/public/assets/scss/txt.scss
+++ b/public/assets/scss/txt.scss
@@ -89,7 +89,7 @@ $fontText: "Raleway", sans-serif;
 }
 
 .home_article-h {
-  font-size: $fontSize_sm3;
+  font-size: $fontSize_sm1;
 }
 
 .hd-li a,
@@ -114,6 +114,7 @@ $fontText: "Raleway", sans-serif;
 
 /* ----- TEXT DECORATION ----- */
 
+.home_article-title,
 .home_partner-title {
   text-decoration: underline;
 }
@@ -137,6 +138,14 @@ $fontText: "Raleway", sans-serif;
 }
 
 body {
+  @include media-min(("phone")) {
+    .home_article-h {
+      font-size: $fontSize_sm3;
+    }
+  }
+}
+
+body {
   @include media-min("tablet") {
     .hd-li a {
       font-size: $fontSize_sm;
@@ -145,6 +154,10 @@ body {
     header .nav_a {
       font-size: $fontSize_sm1;
       font-weight: bold;
+    }
+
+    .home_article-h {
+      font-size: $fontSize_md;
     }
   }
 }
@@ -161,6 +174,10 @@ body {
 
     .home_section .home_partner-h3 {
       font-size: $fontSize_sm;
+    }
+
+    .home_article-h {
+      font-size: $fontSize_md2;
     }
   }
 }
