--- a/public/assets/scss/txt.scss
+++ b/public/assets/scss/txt.scss
@@ -10,6 +10,10 @@ a {
   text-decoration: none;
 }
 
+button {
+  cursor: pointer;
+}
+
 /* ----- TEXT-SIZE VARIABLES ----- */
 
 $fontSize_xxl: 5em;
