--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -80,10 +80,10 @@
 
             <div class="home_btn-wrap">
                 <div class="home-btnbox">
-                    <button class="home-btn key_bg3 key_homedw">S'incrire</button>
+                    <button class="home-btn key_bg3 key_ftdw">S'incrire</button>
                 </div>
                 <div class="home-btnbox">
-                    <button class="home-btn key_bg3 key_homedw">Se connecter</button>
+                    <button class="home-btn key_bg3 key_ftdw">Se connecter</button>
                 </div>
             </div>
         </div>
